[gd_scene load_steps=49 format=3 uid="uid://b35yte0l700u4"]

[ext_resource type="Texture2D" uid="uid://cxli4lmeh85an" path="res://graphics/Player/Character Idle 48x48.png" id="1_mmx6n"]
[ext_resource type="Script" path="res://characters/player/player.gd" id="1_thgtf"]
[ext_resource type="Texture2D" uid="uid://dwkiyqfo40inj" path="res://graphics/Player/PlayerWalk 48x48.png" id="2_yc2uu"]
[ext_resource type="Texture2D" uid="uid://bt33745k1f8cc" path="res://graphics/Player/Player Roll 48x48.png" id="3_6c81e"]
[ext_resource type="Texture2D" uid="uid://c06eis8yfng2l" path="res://graphics/Player/Player Hurt 48x48.png" id="4_dye54"]
[ext_resource type="Texture2D" uid="uid://gleajtevtqg6" path="res://graphics/Player/Player Death 64x64.png" id="5_4wrnc"]
[ext_resource type="Texture2D" uid="uid://kkar0deobrgx" path="res://graphics/Player/Player Jab 48x48.png" id="6_jstw0"]
[ext_resource type="Texture2D" uid="uid://devqwadra12p3" path="res://graphics/Player/Player Punch Cross 64x64.png" id="7_f3baq"]
[ext_resource type="Texture2D" uid="uid://c6xvhw761snyr" path="res://graphics/Player/player shoot 2H 48x48.png" id="9_3dgk0"]
[ext_resource type="Script" path="res://characters/player/HitBox.gd" id="9_8mcrp"]
[ext_resource type="Script" path="res://characters/StateMachine.gd" id="10_or57w"]
[ext_resource type="Script" path="res://characters/player/CollisionShape2D.gd" id="10_vwr36"]
[ext_resource type="Script" path="res://characters/player/IdleState.gd" id="11_yt6ng"]
[ext_resource type="Script" path="res://characters/player/MoveState.gd" id="12_wsttv"]
[ext_resource type="Script" path="res://characters/player/AttackState.gd" id="13_cs5ih"]
[ext_resource type="Script" path="res://characters/player/RollState.gd" id="15_54yk8"]

[sub_resource type="Animation" id="Animation_d7w0d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mmx6n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ibsxr"]
resource_name = "attack1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_jstw0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_v2f4g"]
resource_name = "attack2"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_f3baq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(2, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_hj8ib"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_4wrnc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_n1lyh"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_dye54")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_eihcf"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mmx6n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_gsvm4"]
resource_name = "roll"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6c81e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_2i6jo"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_3dgk0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_0545b"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_yc2uu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pni6g"]
_data = {
"RESET": SubResource("Animation_d7w0d"),
"attack1": SubResource("Animation_ibsxr"),
"attack2": SubResource("Animation_v2f4g"),
"dead": SubResource("Animation_hj8ib"),
"hurt": SubResource("Animation_n1lyh"),
"idle": SubResource("Animation_eihcf"),
"roll": SubResource("Animation_gsvm4"),
"shoot": SubResource("Animation_2i6jo"),
"walk": SubResource("Animation_0545b")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mb1xp"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ytwct"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dggjs"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nw7cp"]
animation = &"roll"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iun1q"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bm6n5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sis1a"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j8tn4"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qymhr"]
advance_condition = &"attack1"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ttunc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r3fkr"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7ptaj"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d8ukc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hb20a"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f4tl4"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_22mjk"]
advance_mode = 2
advance_condition = &"roll"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_va8lh"]
advance_mode = 2
advance_condition = &"roll"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ccuxv"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_52gvn"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3uj4j"]
states/Start/position = Vector2(49, 100)
states/attack1/node = SubResource("AnimationNodeAnimation_mb1xp")
states/attack1/position = Vector2(352, 42)
states/attack2/node = SubResource("AnimationNodeAnimation_ytwct")
states/attack2/position = Vector2(564, 113)
states/idle/node = SubResource("AnimationNodeAnimation_dggjs")
states/idle/position = Vector2(150, 100)
states/roll/node = SubResource("AnimationNodeAnimation_nw7cp")
states/roll/position = Vector2(463, 327)
states/walk/node = SubResource("AnimationNodeAnimation_iun1q")
states/walk/position = Vector2(156, 351)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_bm6n5"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_sis1a"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_j8tn4"), "idle", "attack1", SubResource("AnimationNodeStateMachineTransition_qymhr"), "walk", "attack1", SubResource("AnimationNodeStateMachineTransition_ttunc"), "attack1", "idle", SubResource("AnimationNodeStateMachineTransition_r3fkr"), "attack1", "walk", SubResource("AnimationNodeStateMachineTransition_7ptaj"), "attack1", "attack2", SubResource("AnimationNodeStateMachineTransition_d8ukc"), "attack2", "walk", SubResource("AnimationNodeStateMachineTransition_hb20a"), "attack2", "idle", SubResource("AnimationNodeStateMachineTransition_f4tl4"), "idle", "roll", SubResource("AnimationNodeStateMachineTransition_22mjk"), "walk", "roll", SubResource("AnimationNodeStateMachineTransition_va8lh"), "roll", "idle", SubResource("AnimationNodeStateMachineTransition_ccuxv"), "roll", "walk", SubResource("AnimationNodeStateMachineTransition_52gvn")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdnxw"]
size = Vector2(21, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3kg7"]
size = Vector2(27.5625, 12)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 24
script = ExtResource("1_thgtf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(1.1875, 1.1875)
texture = ExtResource("1_mmx6n")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pni6g")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_3uj4j")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack1 = false
parameters/conditions/idle = false
parameters/conditions/is_moving = false
parameters/conditions/roll = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -0.5)
shape = SubResource("RectangleShape2D_kdnxw")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)

[node name="HitBox" type="Area2D" parent="." node_paths=PackedStringArray("facing_shape", "parent")]
collision_layer = 4
collision_mask = 0
script = ExtResource("9_8mcrp")
facing_shape = NodePath("CollisionShape2D")
parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(12, -3)
shape = SubResource("RectangleShape2D_j3kg7")
disabled = true
script = ExtResource("10_vwr36")
facing_left_position = Vector2(-12, -3)
facing_right_position = Vector2(12, -3)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state", "current_state")]
script = ExtResource("10_or57w")
starting_state = NodePath("IdleState")
current_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state", "attack_state", "roll_state")]
script = ExtResource("11_yt6ng")
move_state = NodePath("../MoveState")
attack_state = NodePath("../AttackState")
roll_state = NodePath("../RollState")

[node name="MoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "attack_state", "roll_state")]
script = ExtResource("12_wsttv")
idle_state = NodePath("../IdleState")
attack_state = NodePath("../AttackState")
roll_state = NodePath("../RollState")
move_speed = 65.0

[node name="AttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("13_cs5ih")
idle_state = NodePath("../IdleState")

[node name="AttackTimer" type="Timer" parent="StateMachine/AttackState"]
wait_time = 0.3
one_shot = true

[node name="BufferTimer" type="Timer" parent="StateMachine/AttackState"]
wait_time = 0.6
one_shot = true

[node name="RollState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("15_54yk8")
idle_state = NodePath("../IdleState")
move_speed = 130.0

[connection signal="animation_finished" from="AnimationTree" to="StateMachine/AttackState" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="StateMachine/RollState" method="_on_animation_tree_animation_finished"]
